--- a/invoice.html.hbs
+++ b/invoice.html.hbs
@@ -8,10 +8,8 @@
             content="width=device-width, initial-scale=1.0, user-scalable=yes"
         />
         <meta name="author" content="{{company.name}}" />
-        <!-- date-meta (= invoice.issued) -->
         <meta name="dcterms.date" content="{{issued}}" />
         <meta name="keywords" content="facture, invoice" />
-        <!-- pagetitle -->
         <title>Facture n°{{number}}</title>
         <style>
             * {
@@ -110,6 +108,17 @@
                     border: dashed 1px black;
                 }
             }
+
+            @media print {
+                a {
+                    color:black;
+                    text-decoration: none;
+                }
+
+                a:visited {
+                    color: black;
+                }
+            }
         </style>
     </head>
     <body>
@@ -118,11 +127,9 @@
                 <img src="./header-logo.png" alt="Logo {{company.name}}" />
             </div>
             <div>
-                <!-- pagetitle -->
                 <h1>Facture n°{{number}}</h1>
             </div>
         </header>
-        <!-- $body$ -->
         <div class="body">
             <div class="company lines">
                 <p><strong>{{company.name}}</strong></p>
@@ -176,13 +183,6 @@
                         <td style="text-align: right">{{total}}€</td>
                     </tr>
                     {{/each}}
-                    {{!-- <tr>
-                        <td>&nbsp;</td>
-                        <td>&nbsp;</td>
-                        <td>&nbsp;</td>
-                        <td>&nbsp;</td>
-                        <td>&nbsp;</td>
-                    </tr> --}}
                     <tr class="total">
                         <td style="text-align: left">
                             <strong>Total HT</strong>
