--- a/invoice.html.hbs
+++ b/invoice.html.hbs
@@ -10,7 +10,7 @@
         <meta name="author" content="{{company.name}}" />
         <meta name="dcterms.date" content="{{issued}}" />
         <meta name="keywords" content="facture, invoice" />
-        <title>Facture n°{{number}}</title>
+        <title>{{company.name}} - Facture n°{{number}}</title>
         <style>
             * {
                 box-sizing: border-box;
