--- a/invoice.html.hbs
+++ b/invoice.html.hbs
@@ -211,6 +211,7 @@
                     de prestation de services
                 </p>
                 <p>Pénalités pour retard de paiement : {{payment.penalty}}% par mois</p>
+                <p>IBAN : {{company.iban}} - BIC : {{company.bic}}</p>
             </div>
         </div>
         <footer class="lines">
